# stego-lib

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: tests.yml
src/: langelaar.cpp  langelaar.hpp  stg.cpp  stg.hpp
tests/: CMakeLists.txt
tests/cross/: tst_crosstestcase.cpp
tests/kutter/decoding/: tst_kutterdecodingtestcase.cpp
tests/kutter/encoding/: tst_kutterencodingtestcase.cpp
tests/kutter/raw_decoding/: tst_kutterrawdecodingtestcase.cpp
tests/langelaar/: CMakeLists.txt
tests/langelaar/encoding/: CMakeLists.txt  tst_langelaarencodingtestcase.cpp
tests/langelaar/mask/: CMakeLists.txt  tst_masktestcase.cpp
tests/lsb/decoding/: tst_lsbdecodingtestcase.cpp
tests/lsb/encoding/: tst_lsbencodingtestcase.cpp
tests/lsb/encoding_fail/: tst_lsbencodingfailtestcase.cpp
tests/lsb/raw_decoding/: tst_lsbrawdecodingtestcase.cpp
tests/skip/: tst_skiptestcase.cpp
